Adjust documentation for Kernel#raise [ci skip]

Mention how each of the arguments are retrievable from the generated
Exception object.

Fixes [Bug #10110]